--- a/firefox-config/stylish-themes/orange-red-black.css
+++ b/firefox-config/stylish-themes/orange-red-black.css
@@ -1,4 +1,4 @@
-mespace html url(http://www.w3.org/1999/xhtml);
+@namespace html url(http://www.w3.org/1999/xhtml);
 @namespace xul url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 /*
     Author: Twily
